wallet-ext: fix menu backdrop
* sometimes the top corners are not rendered rounded for the backdrop and it doesn't look nice - this seems to fix the issue

--- a/wallet/src/ui/app/components/menu/content/MenuContent.module.scss
+++ b/wallet/src/ui/app/components/menu/content/MenuContent.module.scss
@@ -13,6 +13,7 @@
     height: 100%;
     background-color: colors.$gray-100;
     opacity: 0.8;
+    border-radius: 20px 20px 0 0;
 }
 
 .content {
